log/build_2024-12-26_21-05-45/practica1/stderr.log
  File "/home/pablo/ros_ws/src/practica1/install/practica1/lib/python3.12/site-packages/practica1/obstacle_avoider.py", line 31
    else
        ^
SyntaxError: expected ':'

